# BTD_dashboard

./: .gitignore  PRD.md  config.py  db.py  pyproject.toml  ui.py  worker.py
engine/: alerts.py  allocator.py  equity.py  hyperliquid.py  rebalance.py  scanner.py
tests/: test_budget.py  test_db_migration.py  test_deep_scan.py  test_funding_parser.py  test_l2_scoring.py  test_mapping.py  test_ranking.py  test_rebalance.py  test_stock_only.py  test_ui_reasons.py  test_waterfall.py
