[project]
name = "arbiter-dashboard"
version = "2.0.0"
description = "Arbiter Dashboard — delta-neutral cash-and-carry monitoring console"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
